--- a/input.ipynb
+++ b/input.ipynb
@@ -2,13 +2,124 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "#input()\n",
     "num1= 6\n",
     "print(num1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = input(\"Enter first number\")\n",
+    "print(num1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "laiba\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter your name')\n",
+    "print(name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "num1 = int(input('Enter first number'))\n",
+    "num2 = int(input('Enter second number'))\n",
+    "total_sum = num1 + num2\n",
+    "print(total_sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favourite animal is cow\n"
+     ]
+    }
+   ],
+   "source": [
+    "favrt_animal = input(\"What's your favourite animal?\")\n",
+    "print(f\"My favourite animal is {favrt_animal}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Temperature is4.444444444444445\n"
+     ]
+    }
+   ],
+   "source": [
+    "temp = float(input('Enter the temperature in Fahrenheit'))\n",
+    "degrees_celsius = (temp-32) * 5.0/9.0\n",
+    "print(f\"Temperature is{degrees_celsius}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len1 = input('Enter the first length')\n",
+    "len2 = input('Enter the second length')\n"
    ]
   }
  ],
